--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
-  "homepage": ".",
+  "homepage": "./portfolio",
   "private": true,
   "dependencies": {
     "@angular/animations": "^15.1.0",
