--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,4 +11,4 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: NG Build
-        run: npm run build:prod
+        run: echo Still figuring out!
