--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,1 +1,23 @@
+name: Build & Deploy Angular Website
 
+on:
+  push:
+    branches:
+      - 'master'
+
+jobs:
+  build: 
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v1
+
+      - name: Install and build website
+        working-directory: ./
+        run: npm install && npm run build:prod
+
+      - name: Deploy
+        uses: JamesIves/github-pages-deploy-action@4.1.1
+        with:
+          branch: master # The branch the action should deploy to.
+          folder: ./docs # The folder the action should deploy.        
