--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
 
       - name: Install and build website
         working-directory: ./
-        run: npm install && npm run build:prod
+        run: npm install && npm run build:prod && cp docs/index.html docs/404.html
 
       - name: Deploy
         uses: JamesIves/github-pages-deploy-action@4.1.1
